--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "docs": "react-scripts docs",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "githubpages": "rm -rf build && rm -rf docs && npm run build && mv build docs && git add docs/* && git commit -m \"Publish in GitHub Pages\" && git push"
   },
   "eslintConfig": {
     "extends": [
